# AI_Bootcamp_2025

./: .gitignore  README.md  main.py  pyproject.toml
jupyter/: Untitled.ipynb
jupyter/CPU-benchmark/: Model Training Using Cores.ipynb
jupyter/Hierachial-Clustering/: 01-Agglomerative.ipynb  02-Agglomerative.ipynb
jupyter/Hyperparameter-Tuning/: 01-Bayesian-Optimization.ipynb  01-GridSearchCV.ipynb  01-RandomizedSearchCV.ipynb
jupyter/K-Means/: 01-K-Means.ipynb  02-K-Means.ipynb
jupyter/Linear-Regression/: 01-Linear Regression with Python.ipynb  02-Linear Regression Project.ipynb  03-Linear Regression Project - Solutions.ipynb
jupyter/Logistic-Regression/: 01-Logistic Regression with Python.ipynb  02-Logistic Regression Project.ipynb  03-Logistic Regression Project - Solutions.ipynb
